[package]
name = "mission-control"
version = "0.1.0"
authors = ["Štěpán Beneš <benes.stepan@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.16.1", features = ["full"] }
tokio-serial = { version = "5.4.1", features = ["rt"] }
tokio-util = { version = "0.7.0", features = ["codec"] }
futures = "0.3.21"
smelling_salts = "0.4.0"
regex = "1.5.4"
lazy_static = "1.4.0"
nix = "0.23.1"
tokio-tungstenite = "0.16.1"
url = "2.2.2"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_repr = "0.1.7"
rppal = "0.13.1"