[package]
name = "mission-control"
version = "0.1.0"
authors = ["Štěpán Beneš <benes.stepan@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.2", features = ["full"] }
tokio-serial = { version = "5.4.3", features = ["rt"] }
tokio-util = { version = "0.7.3", features = ["codec"] }
futures = "0.3.21"
smelling_salts = "0.4.0"
regex = "1.5.6"
lazy_static = "1.4.0"
nix = "0.24.1"
tokio-tungstenite = "0.17.1"
url = "2.2.2"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde_repr = "0.1.8"
rppal = "0.13.1"
system_shutdown = "3.0.0"