[package]
name = "mission-control"
version = "0.1.0"
authors = ["Štěpán Beneš <benes.stepan@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["codec"] }
futures = "0.3.28"
smelling_salts = "0.4.0"
regex = "1.9.3"
lazy_static = "1.4.0"
nix = "0.26.2"
tokio-tungstenite = "0.20.0"
url = "2.4.0"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
serde_repr = "0.1.16"
rppal = "0.14.1"
system_shutdown = "4.0.1"